# SlicerSimpleFilters

./: CMakeLists.txt  License.txt  README.md
SimpleFilters/: CMakeLists.txt  SimpleFilters.py
SimpleFilters/Testing/Python/: CMakeLists.txt  SimpleFiltersModuleTest.py
Utilities/: UpdateFilterDescriptionsFromSimpleITK.sh
